ultimi aggiustamenti javadoc e nuovi jar